converted to gradle 2.3.3 version

--- a/Jarvis/app/src/main/AndroidManifest.xml
+++ b/Jarvis/app/src/main/AndroidManifest.xml
@@ -76,7 +76,7 @@
 
         <receiver android:name=".FenceReceiver">
             <intent-filter>
-                <action android:name="FENCE RECEIVER ACTION" />
+                <action android:name="FENCE_RECEIVER_ACTION" />
                 <!--<action android:name="android.intent.action.BATTERY_CHANGED"/>
                 <action android:name="android.intent.action.BATTERY_LOW"/>
                 <action android:name="android.intent.action.BATTERY_OKAY"/>
