--- a/Jarvis/app/src/main/AndroidManifest.xml
+++ b/Jarvis/app/src/main/AndroidManifest.xml
@@ -30,12 +30,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".applet.AppletConditionCreator">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-            </intent-filter>
-        </activity>
-
         <activity android:name=".applet.ActionCreator">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -90,6 +84,15 @@
             android:authorities="com.santhosh.jarvis"
             android:name=".database.AppletContentProvider"
             android:exported="false"/>
+
+
+        <receiver android:name=".widget.WidgetProvider">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/applet_widget" />
+        </receiver>
 
     </application>
 
