--- a/Jarvis/keystore.properties
+++ b/Jarvis/keystore.properties
@@ -11,4 +11,4 @@
 storePassword=Kochu@25
 keyPassword=Kochu@25
 keyAlias=JarvisKey
-storeFile=/Users/santhosh-3366/Android Applications/Capstone-Project1/keystore.jks
+storeFile=keystore.jks
